--- a/hugo.toml
+++ b/hugo.toml
@@ -19,18 +19,34 @@ languageCode = "zh-CN"
         mark = "https://cdn.bootcdn.net/ajax/libs/mark.js/8.11.1/mark.min.js"
   # 搜索配置
   [params.search]
-      enable = true
-      # 换回 lunr，因为它不需要复杂的 keys 配置，通常“开箱即用”
-      type = "lunr"
-      # 强制指定索引文件路径
-      searchIndexURL = "/index.json"
-      contentLength = 4000
-      placeholder = "搜索文章..."
-      maxResultLength = 10
-      snippetLength = 30
-      highlightTag = "em"
-      absoluteURL = false
-      rewriteTime = 100000
+    enable = true
+    # 关键点：将类型设置为 "fuse" (本地模糊搜索)，不要设为 "algolia"
+    type = "fuse" 
+    # 文章内容截取长度
+    contentLength = 2000
+    # 搜索框占位符
+    placeholder = ""
+    # 最大结果数量
+    maxResultLength = 10
+    # 关键词高亮标签
+    highlightTag = "em"
+    # 是否使用绝对路径
+    absoluteURL = false
+    # header 上的搜索图标（可选）
+    header = true
+    path = "index.json"
+
+    # Fuse.js 的具体配置（本地搜索算法参数）
+    [params.search.fuse]
+      isCaseSensitive = false
+      minMatchCharLength = 2
+      findAllMatches = false
+      location = 0
+      threshold = 0.3
+      distance = 100
+      ignoreLocation = false
+      useExtendedSearch = false
+      ignoreFieldNorm = false
   # FixIt 的页面配置
   [params.page]
     # 数学公式配置
